✨ feat (Navbar): Personalise logo and Nav

--- a/src/components/elements/Navbar.astro
+++ b/src/components/elements/Navbar.astro
@@ -13,12 +13,12 @@ const navItems = [
         text:"Services"
     },
     {
-        href:"#about-us",
-        text:"About us"
+        href:"#a-propos",
+        text:"A Propos"
     },
     {
-        href:"#features",
-        text:"Features"
+        href:"#contact",
+        text:"Contact"
     },
 ]
 ---
@@ -29,16 +29,15 @@ const navItems = [
             <!-- logo -->
             <div class="min-w-max inline-flex relative">
                 <a href="/" class="relative flex items-center gap-3">
-                    <div class="relative w-7 h-7 overflow-hidden flex rounded-xl">
-                        <span class="absolute w-4 h-4 -top-1 -right-1 bg-green-500 rounded-md rotate-45"></span>
-                        <span class="absolute w-4 h-4 -bottom-1 -right-1 bg-[#FCDC58] rounded-md rotate-45"></span>
-                        <span class="absolute w-4 h-4 -bottom-1 -left-1 bg-primary rounded-md rotate-45"></span>
-                        <span class="absolute w-2 h-2 rounded-full bg-heading-1 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"></span>
+                    <div class="relative z-20 flex w-full justify-between md:px-0 lg:w-max">
+                    <a href="/#home" aria-label="logo" class="flex items-center space-x-2">
+                        <img src="/images/logo.png" alt="Baykat&Business" class="h-16 w-auto" />
+                    </a>
+                </div>
+                   
+                 <div class="inline-flex items-center text-lg font-semibold text-heading-1">
+                        Baykat&Business
                     </div>
-                    <div class="inline-flex text-lg font-semibold text-heading-1">
-                        AgenceX
-                    </div>
-                </a>
             </div>
 
             <div data-nav-overlay aria-hidden="true" class="fixed hidden inset-0 lg:!hidden bg-box-bg bg-opacity-50 backdrop-filter backdrop-blur-xl"></div>
@@ -49,10 +48,6 @@ const navItems = [
                     })
                     }
                 </ul>
-
-                <div class="lg:min-w-max flex items-center sm:w-max w-full pb-6 lg:pb-0 border-b border-box-bg lg:border-0 px-6 lg:px-0">
-                    <BtnLink text="Get Started" href="#cta" className="flex justify-center w-full sm:w-max" variant="primary"/>
-                </div>
             </div>
 
 
