✨ feat (Navbar): Accueil

--- a/src/components/elements/Navbar.astro
+++ b/src/components/elements/Navbar.astro
@@ -6,7 +6,7 @@ import  Navitem from "../shared/Navitem.astro";
 const navItems = [
     {
         href:"#",
-        text:"Home"
+        text:"Accueil"
     },
     {
         href:"#services",
