--- a/src/components/elements/Navbar.astro
+++ b/src/components/elements/Navbar.astro
@@ -36,7 +36,7 @@ const navItems = [
                 </div>
                    
                  <div class="inline-flex items-center text-lg font-semibold text-heading-1">
-                        Baykat&Business
+                      <a href="/#home"> &#xA0;Baykat&Business </a>
                     </div>
             </div>
 
