✨ feat (Number): update content numbers

--- a/src/components/sections/ByNumber.astro
+++ b/src/components/sections/ByNumber.astro
@@ -11,37 +11,41 @@ import Container from "../shared/Container.astro";
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
         >
-          12+
+          +50
         </h2>
-        <p class="mt-2 text-heading-3">Created projects</p>
+        <p class="text-heading-3">Hectares</p>
+        <p class="font-bold mt-2 text-heading-3">Surfaces Cultivées</p>
       </div>
 
       <div class="text-center">
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
         >
-          200+
+          +40
         </h2>
-        <p class="mt-2 text-heading-3">Projects</p>
+        <p class="text-heading-3">Emplois</p>
+        <p class="font-bold mt-2 text-heading-3">partenariats solides</p>
+      </div>
+      
+      <div class="text-center">
+        <h2
+          class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
+        >
+          +20
+        </h2>
+        <p class="text-heading-3">Fournisseurs</p>
+        <p class="font-bold mt-2 text-heading-3">Réseau Engagé</p>
       </div>
 
       <div class="text-center">
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
         >
-          120
+          +25
         </h2>
-        <p class="mt-2 text-heading-3">Happy Client</p>
-      </div>
-
-      <div class="text-center">
-        <h2
-          class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
-        >
-          5+
-        </h2>
-        <p class="mt-2 text-heading-3">Years</p>
-      </div>
+        <p class="text-heading-3">Campagnes</p>
+        <p class="font-bold mt-2 text-heading-3">2021 à nos jours</p>
+      </div>      
     </div>
   </Container>
 </section>
