--- a/src/components/sections/ByNumber.astro
+++ b/src/components/sections/ByNumber.astro
@@ -31,9 +31,9 @@ import Container from "../shared/Container.astro";
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
         >
-          +20
+          +120
         </h2>
-        <p class="text-heading-3">Fournisseurs</p>
+        <p class="text-heading-3 items-center">personnes formées</p>
         <p class="font-bold mt-2 text-heading-3">Réseau Engagé</p>
       </div>
 
