--- a/src/components/sections/AboutUs.astro
+++ b/src/components/sections/AboutUs.astro
@@ -14,32 +14,33 @@ import Title from "../shared/Title.astro";
                 <div class="absolute  p-1 -top-4 md:-top-10 right-0 w-20 h-20 bg-gradient-to-br from-primary to-orange-400 rounded-full blur-3xl opacity-60"></div>
                 
                 <span class="absolute w-full aspect-[16/5] -skew-x-12 rounded-full bg-gradient-to-tr from-primary to-green-400 opacity-40 blur-2xl left-0 bottom-0"></span>
-                <img src={"/images/dev-with-c-1.webp"} alt="banner image" 
-                width="1240" height="1385"
-                class=" w-auto left-1/2 -translate-x-1/2 absolute bottom-0 max-h-full" />
+                <img src={"/images/bb_partenaire.png"} alt="baykat & business" 
+               width="2350" height="2359"
+               
+                class=" w-auto rounded-2xl left-1/2 -translate-x-1/2 absolute bottom-0 max-h-full" />
             </div>
         </div>
         <div class="flex-1 flex midmd:w-7/12 lg:w-1/2 flex-col">
             <Title>
-                We help drive your business forward faster
+                De l'Investisseur au Producteur, de l'Idee à la Vente Lucrative.
             </Title>
             <Paragraph className="mt-8">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, saepe aliquid autem alias vero distinctio dignissimos consequatur? Excepturi quibusdam, quam ipsum hic, laudantium ducimus suscipit, culpa facere consequuntur repellat delectus.
+                Du financement initial à la récolte florissante, nous créons des opportunités dans l'agriculture. Notre expertise transforme les idées en projets prospères, ouvrant des portes vers des marchés à forte valeur ajoutée, favorisant ainsi la croissance partagée pour tous les acteurs de notre écosystème agricole
             </Paragraph>
+
+
+            
             <div class="pt-8 grid grid-cols-2 items-center gap-4 max-w-3xl md:max-w-[none]">
-                <Info description="Lorem ipsum dolor sit amet consectetur" title="Mission">
+                
+                <Info description="Technologies innovantes pour optimiser votre production" title="Solutions Agritech">
                     <span slot="icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 sm:w-5 sm:h-5">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 13.5l10.5-11.25L12 10.5h8.25L9.75 21.75 12 13.5H3.75z" />
-                        </svg>                              
+                        <svg viewBox="0 0 64 64" width="30px" height="30px" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><defs><style> .cls-1 { fill: #f5dd90; } .cls-2 { fill: #e7ecef; } .cls-3 { fill: #8b8c89; } .cls-4 { fill: #bc6c25; } .cls-5 { fill: #5f816b; } .cls-6 { fill: #dda15e; } .cls-7 { fill: #17b04f; } .cls-8 { fill: #17b04f; } </style></defs><path class="cls-5" d="M46,31v-3h-1.5c-.83,0-1.5-.67-1.5-1.5s.67-1.5,1.5-1.5h1.5v-3h-2.5c-.83,0-1.5-.67-1.5-1.5s.67-1.5,1.5-1.5h2.5v-2.76c0-.76,.43-1.45,1.11-1.79l.89-.45,.89,.45c.68,.34,1.11,1.03,1.11,1.79v14.76c.32,.28,.58,.62,.76,1,1.62-.34,3.13-.99,4.48-1.86-.38-1.08-.15-2.33,.71-3.19s2.11-1.09,3.19-.71c.87-1.35,1.52-2.86,1.86-4.48-1.03-.49-1.75-1.54-1.75-2.76s.72-2.27,1.75-2.76c-.34-1.62-.99-3.13-1.86-4.48-1.08,.38-2.33,.15-3.19-.71s-1.09-2.11-.71-3.19c-1.35-.87-2.86-1.52-4.48-1.86-.49,1.03-1.54,1.75-2.76,1.75s-2.27-.72-2.76-1.75c-1.62,.34-3.13,.99-4.48,1.86,.38,1.08,.15,2.33-.71,3.19s-2.11,1.09-3.19,.71c-.87,1.35-1.52,2.86-1.86,4.48,1.03,.49,1.75,1.54,1.75,2.76s-.72,2.27-1.75,2.76c.34,1.62,.99,3.13,1.86,4.48,1.08-.38,2.33-.15,3.19,.71s1.09,2.11,.71,3.19c1.35,.87,2.86,1.52,4.48,1.86,.18-.38,.44-.72,.76-1Z"></path><path class="cls-6" d="M25.58,36.04l-3,1.29c-1.01,.43-2.15,.43-3.15,0l-3-1.29c-1.47-.63-2.42-2.08-2.42-3.68v-5.36c0-3.31,2.69-6,6-6h2c3.31,0,6,2.69,6,6v5.36c0,1.6-.95,3.05-2.42,3.68Z"></path><path class="cls-8" d="M34.14,42c-1.82-1.85-4.35-3-7.14-3h-3c0,1.66-1.34,3-3,3s-3-1.34-3-3h-3c-5.52,0-10,4.48-10,10v7H27l4-14h3.14Z"></path><path class="cls-6" d="M16,52h2c1.1,0,2,.9,2,2v2h-4v-4h0Z"></path><path class="cls-8" d="M11,28.73c-.29,.17-.64,.27-1,.27-1.1,0-2-.9-2-2s.9-2,2-2c.42,0,.81,.13,1.14,.36"></path><path class="cls-8" d="M31,28.73c.29,.17,.64,.27,1,.27,1.1,0,2-.9,2-2s-.9-2-2-2c-.42,0-.81,.13-1.14,.36"></path><path class="cls-4" d="M18,36.71l1.42,.61c1.01,.44,2.15,.44,3.16,0l1.42-.61v2.29c0,1.66-1.34,3-3,3s-3-1.34-3-3v-2.29Z"></path><polyline class="cls-3" points="27 56 31 42 53 42 49 56"></polyline><path class="cls-8" d="M27.4,24.38h-.01c-.57-.23-1.23-.38-2.06-.38-4.33,0-4.33,4-8.67,4-1.13,0-1.97-.27-2.66-.67v-.33c0-3.31,2.69-6,6-6h2c2.37,0,4.42,1.38,5.39,3.38h.01Z"></path><path class="cls-2" d="M28,31.6v-4.6c0-3.31-2.69-6-6-6h-2c-3.31,0-6,2.69-6,6v4h-2c-.55,0-1-.45-1-1v-3c0-5.52,4.48-10,10-10,2.76,0,5.26,1.12,7.07,2.93s2.93,4.31,2.93,7.07v3.18c0,.48-.34,.89-.8,.98l-2.2,.44Z"></path><path class="cls-5" d="M40,48c.55,0,1,.45,1,1s-.45,1-1,1v-2Z"></path><path class="cls-7" d="M21,33h0c-.11-.54,.24-1.07,.78-1.18l8.22-1.64v-2.86c0-4.79-3.61-8.98-8.38-9.3-5.24-.35-9.62,3.81-9.62,8.98v3h2v2h-2c-1.1,0-2-.9-2-2v-2.68c0-5.72,4.24-10.74,9.94-11.27,6.54-.62,12.06,4.53,12.06,10.95v3.18c0,.95-.67,1.77-1.61,1.96l-8.22,1.64c-.54,.11-1.07-.24-1.18-.78Z"></path><path class="cls-7" d="M21,56h-2v-2c0-.55-.45-1-1-1h-7c-.55,0-1-.45-1-1v-4c0-.27,.11-.52,.29-.71l1.29-1.29c.39-.39,1.02-.39,1.41,0h0c.39,.39,.39,1.02,0,1.41l-1,1v2.59h6c1.66,0,3,1.34,3,3v2Z"></path><rect class="cls-5" height="2" width="50" x="3" y="56"></rect><path class="cls-1" d="M41,19h-2c0-2.29,.86-4.47,2.42-6.14l1.46,1.37c-1.21,1.3-1.88,3-1.88,4.78Z"></path><path class="cls-1" d="M54.4,16.15c-.96-2.15-2.92-3.67-5.23-4.05l.33-1.97c2.98,.5,5.5,2.44,6.73,5.21l-1.83,.81Z"></path><path class="cls-8" d="M42,20.5h0c0-.83,.67-1.5,1.5-1.5h2.5s0-2.76,0-2.76c0-.76,.43-1.45,1.11-1.79l.89-.45,.89,.45c.68,.34,1.11,1.03,1.11,1.79v18.57c.09,.08,.18,.15,.26,.24,.41-.75,1.28-1.21,2.23-.98,.73,.17,1.32,.78,1.47,1.51,.27,1.29-.71,2.43-1.96,2.43-.4,0-.77-.12-1.08-.32-.31,1.33-1.49,2.32-2.92,2.32s-2.61-.99-2.92-2.32c-.31,.2-.68,.32-1.08,.32-1.24,0-2.22-1.14-1.96-2.43,.15-.73,.74-1.34,1.47-1.51,.96-.23,1.82,.24,2.23,.98,.08-.09,.17-.16,.26-.24v-6.8s-1.5,0-1.5,0c-.83,0-1.5-.67-1.5-1.5h0c0-.83,.67-1.5,1.5-1.5h1.5s0-3,0-3h-2.5c-.83,0-1.5-.67-1.5-1.5Z"></path></g></svg>
                     </span>
                 </Info>
-                <Info description="Lorem ipsum dolor sit amet consectetur" title="Vision">
+                
+                <Info description="Stratégies innovantes pour maximiser vos ventes." title="Commercialisation Agricole">
                     <span slot="icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 sm:w-5 sm:h-5">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z" />
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-                        </svg>
+                        <svg fill="#16a34a" height="30" width="30" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 372.372 372.372" xml:space="preserve"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <path d="M368.712,219.925c-5.042-8.951-14.563-14.511-24.848-14.511c-4.858,0-9.682,1.27-13.948,3.672l-83.024,46.756 c-1.084,0.61-1.866,1.642-2.163,2.85c-1.448,5.911-4.857,14.164-12.865,19.911c-8.864,6.361-20.855,7.686-35.466,3.939 c-0.088-0.022-0.175-0.047-0.252-0.071L148.252,267.6c-2.896-0.899-4.52-3.987-3.621-6.882c0.72-2.316,2.83-3.872,5.251-3.872 c0.55,0,1.101,0.084,1.634,0.249l47.645,14.794c0.076,0.023,0.154,0.045,0.232,0.065c11.236,2.836,20.011,2.047,26.056-2.288 c7.637-5.48,8.982-15.113,9.141-16.528c0.006-0.045,0.011-0.09,0.014-0.136c0.003-0.023,0.004-0.036,0.005-0.039 c0.001-0.015,0.002-0.03,0.003-0.044c0.001-0.01,0.001-0.019,0.002-0.029c0.909-11.878-6.756-22.846-18.24-26.089l-0.211-0.064 c-0.35-0.114-35.596-11.626-58.053-18.034c-2.495-0.711-9.37-2.366-19.313-2.366c-13.906,0-34.651,3.295-54.549,19.025 L1.67,292.159c-1.889,1.527-2.224,4.278-0.758,6.215l44.712,59.06c0.725,0.956,1.801,1.584,2.99,1.744 c0.199,0.027,0.398,0.04,0.598,0.04c0.987,0,1.954-0.325,2.745-0.935l57.592-44.345c1.294-0.995,3.029-1.37,4.619-0.995 l93.02,21.982c6.898,1.63,14.353,0.578,20.523-2.9l130.16-73.304C371.555,251.012,376.418,233.61,368.712,219.925z"></path> <path d="M316.981,13.155h-170c-5.522,0-10,4.477-10,10v45.504c0,5.523,4.478,10,10,10h3.735v96.623c0,5.523,4.477,10,10,10h142.526 c5.523,0,10-4.477,10-10V78.658h3.738c5.522,0,10-4.477,10-10V23.155C326.981,17.632,322.503,13.155,316.981,13.155z M253.016,102.417h-42.072c-4.411,0-8-3.589-8-8c0-4.411,3.589-8,8-8h42.072c4.411,0,8,3.589,8,8 C261.016,98.828,257.427,102.417,253.016,102.417z M306.981,58.658h-3.738H160.716h-3.735V33.155h150V58.658z"></path> </g> </g></svg>
                     </span>
                 </Info>
             </div>
