--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,13 +8,12 @@ import CTA from '../components/sections/CTA.astro';
 import Brands from '../components/sections/Brands.astro';
 ---
 
-<Layout title="Welcome to AgenceX">
+<Layout title="Baykat & Business">
 	<main class="flex flex-col gap-y-20 md:gap-y-32 overflow-hidden">
 		<Hero/>
-		<Brands/>
 		<Services/>
 		<AboutUs/>
-		<Features/>
-		<CTA/>
+		<!--Features/>
+		<CTA/-->
 	</main>
 </Layout>
