✨ feat (Footer):logo

--- a/src/components/elements/Footer.astro
+++ b/src/components/elements/Footer.astro
@@ -113,17 +113,19 @@ const footerLegal = [
         <div class="grid grid-cols-2 lg:grid-cols-3 lg:items-stretch gap-8 relative">
             <div class="col-span-2 lg:col-span-1 h-auto flex flex-col">
                 <div class="h-full">
-                    <a href="#" class="relative flex items-center gap-3">
-                        <div class="relative w-7 h-7 overflow-hidden flex rounded-xl">
-                            <span class="absolute w-4 h-4 -top-1 -right-1 bg-green-500 rounded-md rotate-45"></span>
-                            <span class="absolute w-4 h-4 -bottom-1 -right-1 bg-[#FCDC58] rounded-md rotate-45"></span>
-                            <span class="absolute w-4 h-4 -bottom-1 -left-1 bg-primary rounded-md rotate-45"></span>
-                            <span class="absolute w-2 h-2 rounded-full bg-heading-1 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2"></span>
-                        </div>
-                        <div class="inline-flex text-lg font-semibold text-heading-1">
-                            AgenceX
-                        </div>
-                    </a>
+                    <!-- logo -->
+                    <div class="min-w-max inline-flex relative">
+                        <a href="/" class="relative flex items-center gap-3">
+                            <div class="relative z-20 flex w-full justify-between md:px-0 lg:w-max">
+                            <a href="/#home" aria-label="logo" class="flex items-center space-x-2">
+                                <img src="/images/logo.png" alt="Baykat&Business" class="h-16 w-auto" />
+                            </a>
+                    </div>
+                        
+                    <div class="inline-flex items-center text-lg font-semibold text-heading-1">
+                            <a href="/#home"> &#xA0;Baykat&Business </a>
+                    </div>
+                </div>
                     <Paragraph className={"mt-8"}>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, maiores nam doloribus id magni
                     </Paragraph>
@@ -177,10 +179,10 @@ const footerLegal = [
         <Container>
             <div class="flex justify-between items-center gap-6 md:text-lg text-heading-3">
                 <div>
-                    &copy; <span id="year"></span> AgenceX. All right reserved
+                    &copy; <span id="year"></span> <a href="https://mbayedione.netlify.app/">#NioulBoy. All right reserved</a>
                 </div>
                 <div>
-                    Proudly made by <a href="https://github.com/johnkat-mj" target="_blank" class="font-semibold">John Kat</a>
+                    Proudly made by <a href="https://github.com/mbayedione10" target="_blank" class="font-semibold">Mamadou Mb. Dione</a>
                 </div>
             </div>
         </Container>
