✨ feat (Section): Ajout de nouvelles sections

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,16 +4,19 @@ import Hero from '../components/sections/Hero.astro';
 import Services from '../components/sections/Services.astro';
 import AboutUs from '../components/sections/AboutUs.astro';
 import Features from '../components/sections/Features.astro';
-import CTA from '../components/sections/CTA.astro';
+import Contact from '../components/sections/Contact.astro';
 import Brands from '../components/sections/Brands.astro';
+import Agritech from '../components/sections/Agritech.astro';
 ---
 
 <Layout title="Baykat & Business">
 	<main class="flex flex-col gap-y-20 md:gap-y-32 overflow-hidden">
 		<Hero/>
 		<Services/>
-		<AboutUs/>
-		<!--Features/>
-		<CTA/-->
+		<AboutUs/>	
+		<Agritech/>
+		<!--Features/-->
+		<Contact/>
+		
 	</main>
 </Layout>
