--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -72,16 +72,21 @@ Nom et Prenom
       <input class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight  focus:bg-white" id="nom" name="nom" type="text" placeholder="Jane Doe">
     </div>
     <div class="w-full md:w-1/2 px-3">
-      <label class="required block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="email">
-        Email
+      <label for="email">
+        <Paragraph>
+          Email
+        </Paragraph>
+        
       </label>
       <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" required id="email" name="email" type="email" placeholder="johndoe@gmail.com">
     </div>
   </div>
   <div class="flex flex-wrap -mx-3 mb-6">
     <div class="w-full px-3">
-      <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="message">
-        Message
+      <label for="message">
+        <Paragraph>
+          Message
+        </Paragraph>
       </label>
     <textarea
                 id="message"
