💄 style (Sections): refactore

--- a/src/components/sections/Agritech.astro
+++ b/src/components/sections/Agritech.astro
@@ -14,7 +14,7 @@ import Title from "../shared/Title.astro";
                 Digitalisation de la chaîne de valeur
             </Paragraph>
         </div>
-        <img class="mx-auto mt-5 rounded-2xl" alt="banner image" width="1000" height="400" src="/images/app.png" loading="lazy" decoding="async">
+        <img class="mx-auto mt-5 rounded-2xl" alt="agritech" width="1000" height="400" src="/images/app.png" loading="lazy" decoding="async">
         
         </div>
     </Container>
