--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -53,7 +53,8 @@ import Title from "../shared/Title.astro";
       <form 
             name="contact"
             class="mx-auto text-center max-w-xl md:max-w-2xl relative mt-5"
-            netlify>
+            data-netlify="true"
+            >
           <div class="flex flex-wrap -mx-3 mb-6">
             <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
               <label for="nom">
