--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,9 @@ import Layout from '../layouts/Layout.astro';
 import Hero from '../components/sections/Hero.astro';
 import Services from '../components/sections/Services.astro';
 import AboutUs from '../components/sections/AboutUs.astro';
-import Features from '../components/sections/Features.astro';
 import Contact from '../components/sections/Contact.astro';
-import Brands from '../components/sections/Brands.astro';
 import Agritech from '../components/sections/Agritech.astro';
+import ServicesAgritech from '../components/sections/Services_agritech.astro';
 ---
 
 <Layout title="Baykat & Business">
@@ -15,7 +14,7 @@ import Agritech from '../components/sections/Agritech.astro';
 		<Services/>
 		<AboutUs/>	
 		<Agritech/>
-		<!--Features/-->
+		<ServicesAgritech/>
 		<Contact/>
 		
 	</main>
