♻️ refactor(footer): update link

--- a/src/components/elements/Footer.astro
+++ b/src/components/elements/Footer.astro
@@ -98,7 +98,7 @@ const currentYear = new Date().getFullYear();
         <Container>
             <div class="flex justify-between items-center gap-6 md:text-lg text-heading-3">
                 <div>
-                    &copy; {currentYear} <span id="year"></span> <a target="_blank" href="https://mbayedione.netlify.app/"> #NioulBoy. All right reserved</a>
+                    &copy; {currentYear} <span id="year"></span> <a target="_blank" href="https://mbayedione.xyz/"> #NioulBoy. All right reserved</a>
                 </div>
             </div>
         </Container>
