--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -26,7 +26,7 @@ import ByNumber from "./ByNumber.astro";
         </div>
 
         <div class="flex flex-1 lg:w-1/2 lg:h-auto relative lg:max-w-none lg:mx-0 mx-auto max-w-3xl">
-            <img src="/images/baykatandbusiness-bg.png" alt="Hero image" width="2350" height="2359" class="lg:absolute lg:w-full lg:h-full rounded-3xl object-cover lg:max-h-none max-h-96">
+            <img src="https://lh3.googleusercontent.com/pw/ABLVV87HIHIdOolK0yxjb7A8pbZMISjJ8udP610iFmlASRsgNOKgELfbU0z69lIXtnQnl3UA_BAaOjaIjB0Ww_kH37mBRhg9qiKPpmJwbd0Or95H0kuenC52=w2400" alt="Hero image" width="2350" height="2359" class="lg:absolute lg:w-full lg:h-full rounded-3xl object-cover lg:max-h-none max-h-96">
         </div>
     </Container>
 
