--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
 import Footer from "../components/elements/Footer.astro";
 import Navbar from "../components/elements/Navbar.astro";
+const TRACKING_ID = import.meta.env.PUBLIC_TRACKING_ID!;
+const gaSrc = `https://www.googletagmanager.com/gtag/js?id=${TRACKING_ID}`;
 
 export interface Props {
   title: string;
@@ -27,6 +29,17 @@ const { title } = Astro.props;
     <Navbar />
     <slot />
     <Footer />
+    <script async src={gaSrc}></script>
+    <script async>
+    const TRACKING_ID = import.meta.env.PUBLIC_TRACKING_ID;
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      window.dataLayer.push(arguments);
+    }
+
+    gtag("js", new Date());
+    gtag("config", TRACKING_ID);
+    </script>
   </body>
   <script>
     const switchTheme = document.querySelector(
