♻️ refactor (cta): update

--- a/src/components/sections/CTA2.astro
+++ b/src/components/sections/CTA2.astro
@@ -44,23 +44,21 @@ import Button from "../shared/Button.astro";
         Rythme d'enseignement:
         <ul>
           <li>
-            <span
-              class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center"
-              >&checkmark;</span
-            > 1 séance théorique par semaines (pour les 3 premières semaines)
+            <Paragraph className="ml-8">
+              &checkmark; 1 séance théorique par semaines (pour les 3 premières
+              semaines)
+            </Paragraph>
           </li>
           <li>
-            <span
-              class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center"
-              >&checkmark;</span
-            > 1 dernière séance théorique à la 4ème semaine
+            <Paragraph className="ml-8">
+              &checkmark; 1 dernière séance théorique à la 4ème semaine
+            </Paragraph>
           </li>
           <li>
-            <span
-              class="font-bold bg-box-bg rounded-full w-8 h-8 mr-3 text-primary inline-flex justify-center items-center"
-              >&checkmark;</span
-            > 1 séance pratique à la 4ème semaine (journée d'immersion dans une ferme
-            agricole)
+            <Paragraph className="ml-8">
+              &checkmark; 1 séance pratique à la 4ème semaine (journée
+              d'immersion dans une ferme agricole)
+            </Paragraph>
           </li>
         </ul>
       </Paragraph>
