♻️ refactor (sections):add ids

--- a/src/components/sections/CTA2.astro
+++ b/src/components/sections/CTA2.astro
@@ -5,7 +5,7 @@ import Title from "../shared/Title.astro";
 import Button from "../shared/Button.astro";
 ---
 
-<section id="features">
+<section id="formation">
   <Container className="flex flex-col midmd:flex-row gap-10 lg:gap-12">
     <div class="flex-1 flex justify-start items-center order-2 midmd:order-1">
       <div class="w-full h-90 sm:h-96 midmd:h-full relative">
