--- a/src/components/sections/CTA1.astro
+++ b/src/components/sections/CTA1.astro
@@ -5,7 +5,7 @@ import Title from "../shared/Title.astro";
 import Button from "../shared/Button.astro";
 ---
 
-<section id="features">
+<section id="partenariat">
   <Container className="flex flex-col midmd:flex-row gap-10 lg:gap-12">
     <div class="flex-1 flex flex-col">
       <Title>Proposition de partenariat</Title>
